@@ -1,0 +1,3 @@
+Starting from Cordova 8.x.x it seems a package.json is required / generated. 
+It's generated if it does not exists from the config.xml content, but it's not updated if the config.xml is updated. 
+I dont' know if this file should be under git control.
