@@ -75,10 +75,11 @@
  - Settings: Added option to start a new game
 
 1.11.1
+ - Android 4.X is no longer supported. Min. Android version is now 5.0
  - Fixed bug on book 6 / sect284: If you lost all your money, you could not go to sect76
  - Fixed bug picking map on book 6 if you had 12 or more Special Items
  - Better explanation for export / import / save / load games
  - Fixed bug trying to export saved games if there was none
  - Fixed bug on book 10 / Equipment: Missed Potion of Alether
- - Book 5: Do not show +2 CS on stats if you cannot use Shield by Limbdeath (Thanks Julian!)
+ - Book 5: Do not show +2 CS on stats if you cannot use Shield by Limbdeath. Thanks Julian!
  - Support for Extended Combat Results Table (LW club newsletter 29). Thanks Julian!
